[gd_scene load_steps=9 format=3 uid="uid://d0y487jhnugs7"]

[ext_resource type="Script" path="res://HUD/GameOverHUD/game_over_hud.gd" id="1_5hrrw"]
[ext_resource type="FontFile" uid="uid://p8g0sp7rxolq" path="res://assets/flappy-font.ttf" id="1_dpvm1"]
[ext_resource type="Texture2D" uid="uid://yrp1maykpere" path="res://HUD/GameOverHUD/game-over.png" id="3_efhec"]
[ext_resource type="Texture2D" uid="uid://n3440yxg4ysf" path="res://HUD/GameOverHUD/score-sheet.png" id="4_nscnu"]
[ext_resource type="Texture2D" uid="uid://kublfr40hquf" path="res://HUD/GameOverHUD/okbutton.png" id="6_1gknp"]
[ext_resource type="Texture2D" uid="uid://cjfd6p5uqrhjl" path="res://HUD/GameOverHUD/sharebutton.png" id="7_3iw2s"]
[ext_resource type="Script" path="res://HUD/button.gd" id="7_erm88"]
[ext_resource type="AudioStream" uid="uid://brwkv81mvpslo" path="res://assets/sounds/woosh.wav" id="8_rvh6r"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_5hrrw")

[node name="GameOver" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.5
offset_top = 117.335
offset_right = 125.5
offset_bottom = 189.335
grow_horizontal = 2
texture = ExtResource("3_efhec")
stretch_mode = 4

[node name="ScoreSheet" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -333.0
offset_right = -148.16
offset_bottom = -277.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Background" type="TextureRect" parent="ScoreSheet"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 23.5
offset_top = 230.0
offset_right = 296.5
offset_bottom = 370.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_nscnu")

[node name="ScoreLabel" type="Label" parent="ScoreSheet"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 141.0
offset_top = 298.0
offset_right = 381.93
offset_bottom = 400.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_dpvm1")
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1

[node name="BestScoreLabel" type="Label" parent="ScoreSheet"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 141.0
offset_top = 349.59
offset_right = 381.93
offset_bottom = 451.59
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_dpvm1")
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="."]
offset_left = 61.0
offset_top = 416.0
offset_right = 289.0
offset_bottom = 477.0
alignment = 1
metadata/_edit_group_ = true

[node name="OKButton" type="TextureButton" parent="Buttons"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("6_1gknp")
stretch_mode = 5
script = ExtResource("7_erm88")

[node name="Spacer1" type="Control" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="ShareButton" type="TextureButton" parent="Buttons"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("7_3iw2s")
stretch_mode = 5
script = ExtResource("7_erm88")

[node name="MenuSelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_rvh6r")

[connection signal="pressed" from="Buttons/OKButton" to="Buttons/OKButton" method="_on_pressed"]
[connection signal="pressed" from="Buttons/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="Buttons/ShareButton" to="Buttons/ShareButton" method="_on_pressed"]
